--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "phpmailer/phpmailer",
+    "name": "izisoft/yii2-mailer",
     "type": "library",
     "description": "PHPMailer is a full-featured email creation and transfer class for PHP",
     "authors": [
@@ -24,15 +24,6 @@
         "ext-ctype": "*",
         "ext-filter": "*"
     },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.2",
-        "phpdocumentor/phpdocumentor": "2.*",
-        "phpunit/phpunit": "^4.8 || ^5.7",
-        "zendframework/zend-serializer": "2.7.*",
-        "doctrine/annotations": "1.2.*",
-        "zendframework/zend-eventmanager": "3.0.*",
-        "zendframework/zend-i18n": "2.7.3"
-    },
     "suggest": {
         "psr/log": "For optional PSR-3 debug logging",
         "league/oauth2-google": "Needed for Google XOAUTH2 authentication",
@@ -44,11 +35,6 @@
     "autoload": {
         "psr-4": {
             "PHPMailer\\PHPMailer\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "PHPMailer\\Test\\": "test/"
         }
     },
     "license": "LGPL-2.1"
